// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component should render correctly 1`] = `
<div>
  <ul
    id="navBar"
  >
    <li>
      <a
        href="/"
      >
        <img
          id="logo-image"
          src="../icons/logo2.png"
        />
        <span
          id="logo-text"
        >
          Brew Day!
        </span>
      </a>
    </li>
    <li>
      <a
        href="/ricette"
      >
        Ricette
      </a>
    </li>
    <li>
      <a
        href="/birre"
      >
        Birre
      </a>
    </li>
    <li>
      <a
        href="/inventario"
      >
        Inventario
      </a>
    </li>
    <li>
      <a
        href="/spesa"
      >
        Spesa
      </a>
    </li>
  </ul>
</div>
`;

exports[`index.js should render the App component 1`] = `
Array [
  <div>
    <ul
      id="navBar"
    >
      <li>
        <a
          href="/"
          onClick={[Function]}
        >
          <img
            id="logo-image"
            src="../icons/logo2.png"
          />
          <span
            id="logo-text"
          >
            Brew Day!
          </span>
        </a>
      </li>
      <li>
        <a
          href="/ricette"
          onClick={[Function]}
        >
          Ricette
        </a>
      </li>
      <li>
        <a
          href="/birre"
          onClick={[Function]}
        >
          Birre
        </a>
      </li>
      <li>
        <a
          href="/inventario"
          onClick={[Function]}
        >
          Inventario
        </a>
      </li>
      <li>
        <a
          href="/spesa"
          onClick={[Function]}
        >
          Spesa
        </a>
      </li>
    </ul>
  </div>,
  <div />,
]
`;
